# first_flight

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: standard_issue_template.md
.github/workflows/: CI.yml  dart.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ar_page.dart  camera_page.dart  favorites_page.dart  feature_request_page.dart  geolocate.dart  location_page.dart  main.dart  main2.dart  map_page.dart  math.dart  news_page.dart  orbit_page.dart  sett_model.dart  settings_page.dart  sgp4.dart  skybox.dart  style.dart  theme_handle.dart  types.dart  view_page.dart  vizPage.dart
lib/calc/: map.dart  math.dart  orbit.dart  sgp4.dart  skybox.dart
lib/mem/: article.dart  orbit.dart  preferences.dart  theme_handle.dart
lib/src/api/: mod.rs
lib/ui/: favorites_page.dart  location_page.dart  map_page.dart  news_page.dart  orbit_page.dart  settings_page.dart  view_page.dart
lib/web/: celestrak.dart  news.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/api/: overhead_pass.rs  simple.rs
rust_builder/: .gitignore
scripts/: pre-commit.bash
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+1 files in other folders)
